--- a/package.json
+++ b/package.json
@@ -1,18 +1,40 @@
 {
   "name": "vuetify-pro-dialog",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
+  "license": "MIT",
+  "description": "vuetify-pro-dialog",
+  "main": "dist/vuetify-pro-dialog.umd.js",
+  "module": "dist/vuetify-pro-dialog.esm.js",
+  "unpkg": "dist/vuetify-pro-dialog.min.js",
+  "types": "types/index.d.ts",
+  "author": "yikoyu<2282373181@qq.com>",
+  "files": [
+    "dist",
+    "types",
+    "*.json"
+  ],
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "build": "npm run build:umd & npm run build:es & npm run build:unpkg",
+    "build:umd": "rollup --config rollup.config.js --format umd --file dist/vuetify-pro-dialog.umd.js",
+    "build:es": "rollup --config rollup.config.js --format es --file dist/vuetify-pro-dialog.esm.js",
+    "build:unpkg": "rollup --config rollup.config.js --format iife --file dist/vuetify-pro-dialog.min.js",
     "lint": "vue-cli-service lint"
   },
-  "dependencies": {
-    "vue": "^2.6.11",
-    "vue-router": "^3.2.0",
-    "vuex": "^3.4.0"
-  },
+  "keywords": [
+    "vue",
+    "typescript",
+    "vuetify",
+    "dialog"
+  ],
+  "dependencies": {},
   "devDependencies": {
+    "@rollup/plugin-buble": "^0.21.3",
+    "@rollup/plugin-commonjs": "^17.0.0",
+    "@rollup/plugin-image": "^2.0.6",
+    "@rollup/plugin-typescript": "^8.1.0",
+    "@types/core-js": "^2.5.4",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
@@ -22,13 +44,23 @@
     "@vue/cli-service": "~4.5.0",
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^5.0.2",
+    "core-js": "^3.8.2",
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^6.2.2",
     "prettier": "^1.19.1",
+    "rollup": "^2.36.1",
+    "rollup-plugin-css-porter": "^1.0.2",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-vue": "5.1.9",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
     "typescript": "~3.9.3",
-    "vue-template-compiler": "^2.6.11"
+    "vue": "^2.6.12",
+    "vue-cli-plugin-vuetify": "^2.0.9",
+    "vue-template-compiler": "^2.6.11",
+    "vuetify": "^2.4.2",
+    "vuetify-loader": "^1.6.0"
   }
 }
