--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vuetify-pro-dialog",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "private": false,
   "license": "MIT",
   "description": "vuetify-pro-dialog",
@@ -12,7 +12,7 @@
   "files": [
     "dist",
     "types",
-    "*.json"
+    "package.json"
   ],
   "scripts": {
     "serve": "vue-cli-service serve",
