--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vuetify-pro-dialog",
-  "version": "0.1.1",
+  "version": "0.2.0",
   "private": false,
   "license": "MIT",
   "description": "vuetify-pro-dialog",
@@ -9,6 +9,10 @@
   "unpkg": "dist/vuetify-pro-dialog.min.js",
   "types": "types/index.d.ts",
   "author": "yikoyu<2282373181@qq.com>",
+  "repository": {
+    "type": "git",
+    "url": "https://gitee.com/hzsage/vuetify-pro-dialog"
+  },
   "files": [
     "dist",
     "types",
