--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
   ],
   "dependencies": {},
   "devDependencies": {
+    "@commitlint/cli": "^12.1.4",
+    "@commitlint/config-conventional": "^12.1.4",
     "@rollup/plugin-buble": "^0.21.3",
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-image": "^2.0.6",
@@ -52,6 +54,8 @@
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^6.2.2",
+    "husky": "4.2.5",
+    "lint-staged": "^11.0.0",
     "prettier": "^1.19.1",
     "rollup": "^2.36.1",
     "rollup-plugin-css-porter": "^1.0.2",
