--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@commitlint/cli": "^15.0.0",
     "@commitlint/config-conventional": "^15.0.0",
     "@commitlint/cz-commitlint": "^15.0.0",
+    "@types/lodash.merge": "^4.6.6",
     "@types/node": "^16.11.8",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
@@ -73,6 +74,7 @@
   },
   "dependencies": {
     "@vue/composition-api": "^1.4.0",
+    "lodash.merge": "^4.6.2",
     "vue": "^2.6.14",
     "vuetify": "^2.6.0"
   }
