--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,10 +21,6 @@
     "src/**/*.ts",
     "src/**/*.d.ts",
     "src/**/*.tsx",
-    "src/**/*.vue",
-    "examples/**/*.ts",
-    "examples/**/*.d.ts",
-    "examples/**/*.tsx",
-    "examples/**/*.vue"
+    "src/**/*.vue"
   ]
 }
