--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
   ],
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc --noEmit && vite build",
+    "build:lib": "vue-tsc --noEmit && vite build",
+    "build:examples": "vue-tsc --noEmit && vite build --mode examples",
     "lint": "eslint {src,examples}/**/*.{js,ts,tsx,vue}",
     "lint:fix": "eslint {src,examples}/**/*.{js,ts,tsx,vue} --fix",
     "git-commit": "git-cz",
