--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vuetify-pro-dialog",
-  "version": "0.0.0",
+  "version": "2.0.0",
   "license": "MIT",
   "description": "vuetify-pro-dialog",
   "private": false,
@@ -15,17 +15,17 @@
     "vuetify",
     "dialog"
   ],
-  "main": "./dist/vuetify-pro-dialog.umd.js",
-  "module": "./dist/vuetify-pro-dialog.es.js",
+  "main": "./lib/vuetify-pro-dialog.umd.js",
+  "module": "./lib/vuetify-pro-dialog.es.js",
   "exports": {
     ".": {
-      "import": "./dist/vuetify-pro-dialog.es.js",
-      "require": "./dist/vuetify-pro-dialog.umd.js"
+      "import": "./lib/vuetify-pro-dialog.es.js",
+      "require": "./lib/vuetify-pro-dialog.umd.js"
     }
   },
-  "types": "./dist/src",
+  "types": "./lib/src",
   "files": [
-    "dist",
+    "lib",
     "package.json",
     "README.md",
     "LICENSE"
