--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -16,7 +16,15 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-    - uses: pnpm/action-setup@v2.0.1
+    - uses: actions/cache@v2
+      with:
+        path: ~/.pnpm-store
+        key: ${{ runner.os }}-${{ hashFiles('**/pnpm-lock.yaml') }}
+        restore-keys: |
+          ${{ runner.os }}-
+
+    - name: Install pnpm
+      uses: pnpm/action-setup@v2.0.1
       with:
         version: ${{ matrix.pnpm }}
 
@@ -24,15 +32,8 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node }}
+        registry-url: https://registry.npmmirror.com/
         cache: 'pnpm'
-
-    - name: Cache pnpm modules
-      uses: actions/cache@v2
-      with:
-        path: ~/.pnpm-store
-        key: ${{ runner.os }}-${{ hashFiles('**/pnpm-lock.yaml') }}
-        restore-keys: |
-          ${{ runner.os }}-
 
     - name: Install dependencies
       run: pnpm install
