--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "vuetify-pro-dialog",
   "version": "2.0.0",
   "license": "MIT",
-  "description": "vuetify-pro-dialog",
+  "description": "functional components snackbar and dialog for vuetify",
   "private": false,
   "author": "yikoyu<2282373181@qq.com>",
   "repository": {
     "type": "git",
-    "url": "https://gitee.com/hzsage/vuetify-pro-dialog"
+    "url": "https://github.com/yikoyu/vuetify-pro-dialog"
   },
+  "homepage": "https://yikoyu.github.io/vuetify-pro-dialog/",
   "keywords": [
     "vue",
     "typescript",
@@ -23,7 +24,7 @@
       "require": "./lib/vuetify-pro-dialog.umd.js"
     }
   },
-  "types": "./lib/src",
+  "types": "./lib/src/index.d.ts",
   "files": [
     "lib",
     "package.json",
@@ -37,6 +38,7 @@
     "lint": "eslint {src,examples}/**/*.{js,ts,tsx,vue}",
     "lint:fix": "eslint {src,examples}/**/*.{js,ts,tsx,vue} --fix",
     "git-commit": "git-cz",
+    "push": "pnpm build:lib && pnpm publish --registry http://registry.npmjs.org",
     "preinstall": "npx only-allow pnpm"
   },
   "config": {
