config(vite): vuetify-pro-dialog别名地址改为lib

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,7 @@
     "lib": ["esnext", "dom"],
     "paths": {
       "@/*":["./src/*"],
-      "vuetify-pro-dialog":["./src/index.ts"]
+      "vuetify-pro-dialog":["./lib/src/index.d.ts"]
     }
   },
   "include": [
