--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   "scripts": {
     "dev": "vite",
     "build:lib": "vue-tsc --noEmit && vite build",
-    "build:examples": "vue-tsc --noEmit && vite build --mode examples",
+    "build:examples": "pnpm build:lib && vue-tsc --noEmit && vite build --mode examples",
     "lint": "eslint {src,examples}/**/*.{js,ts,tsx,vue}",
     "lint:fix": "eslint {src,examples}/**/*.{js,ts,tsx,vue} --fix",
     "git-commit": "git-cz",
