--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,10 +1,11 @@
 on:
   push:
-    branches: [master]
+    tags:
+    - 'v*'
   workflow_dispatch:
 
 jobs:
-  ci:
+  publish-to-npm:
     runs-on: ${{ matrix.os }}
 
     strategy:
@@ -40,4 +41,5 @@ jobs:
 
     - name: Build Project
       run: pnpm push
+      env:
         NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
