--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "lint": "eslint {src,examples}/**/*.{js,ts,tsx,vue}",
     "lint:fix": "eslint {src,examples}/**/*.{js,ts,tsx,vue} --fix",
     "git-commit": "git-cz",
-    "push": "pnpm build:lib && pnpm publish --registry http://registry.npmjs.org",
+    "push": "pnpm build:lib && npm publish --registry http://registry.npmjs.org",
     "preinstall": "npx only-allow pnpm"
   },
   "config": {
