--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -43,6 +43,6 @@ jobs:
       run: pnpm build:lib
 
     - name: Publish to NPM
-      run: pnpm publish --no-git-checks --registry http://registry.npmjs.org" || true
+      run: pnpm publish --no-git-checks --registry http://registry.npmjs.org
       env:
         NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
