--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -33,7 +33,7 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node }}
-        registry-url: https://registry.npmmirror.com/
+        registry-url: https://registry.npmjs.com/
         cache: 'pnpm'
 
     - name: Install dependencies
@@ -42,7 +42,10 @@ jobs:
     - name: Build Lib
       run: pnpm build:lib
 
+    - name: Gen npmrc
+      run: echo "//registry.npmjs.com/:_authToken=${{ secrets.NPM_TOKEN }}" >> ./.npmrc
+
     - name: Publish to NPM
-      run: pnpm publish --no-git-checks --registry http://registry.npmjs.org
+      run: pnpm publish --no-git-checks
       env:
         NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
