--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        node: [16]
+        node: [14]
         pnpm: [6.22.1]
 
     steps:
@@ -33,19 +33,15 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node }}
-        registry-url: https://registry.npmjs.com/
+        registry-url: https://registry.npmmirror.com/
         cache: 'pnpm'
 
     - name: Install dependencies
       run: pnpm install
 
-    - name: Build Lib
-      run: pnpm build:lib
-
-    - name: Gen npmrc
-      run: echo "//registry.npmjs.com/:_authToken=${{ secrets.NPM_TOKEN }}" >> ./.npmrc
-
     - name: Publish to NPM
-      run: pnpm publish --no-git-checks
+      run: |
+        npm config set //registry.npmjs.org/:_authToken=$NPM_TOKEN
+        pnpm push
       env:
-        NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+        NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
