--- a/examples/package.json
+++ b/examples/package.json
@@ -5,7 +5,8 @@
     "@vue/composition-api": "^1.4.0",
     "markdown-it": "^12.2.0",
     "markdown-it-prism": "^2.2.1",
-    "prismjs": "^1.25.0"
+    "prismjs": "^1.25.0",
+    "vuetify-pro-dialog": "workspace:^2.0.1"
   },
   "devDependencies": {
     "@types/markdown-it": "^12.2.3",
