--- a/examples/package.json
+++ b/examples/package.json
@@ -6,6 +6,8 @@
     "markdown-it": "^12.2.0",
     "markdown-it-prism": "^2.2.1",
     "prismjs": "^1.25.0",
+    "vue": "^2.6.14",
+    "vuetify": "^2.6.2",
     "vuetify-pro-dialog": "workspace:^2.0.1"
   },
   "devDependencies": {
