--- a/package.json
+++ b/package.json
@@ -76,12 +76,12 @@
     "vite-plugin-dts": "^0.9.4",
     "vite-plugin-eslint": "^1.3.0",
     "vite-plugin-vue2": "^1.9.0",
+    "vue": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
-    "vue-tsc": "^0.29.5"
+    "vue-tsc": "^0.29.5",
+    "vuetify": "^2.6.2"
   },
   "dependencies": {
-    "lodash.merge": "^4.6.2",
-    "vue": "^2.6.14",
-    "vuetify": "^2.6.0"
+    "lodash.merge": "^4.6.2"
   }
 }
