--- a/examples/package.json
+++ b/examples/package.json
@@ -2,16 +2,7 @@
   "name": "examples",
   "version": "0.0.0",
   "dependencies": {
-    "@vue/composition-api": "^1.4.0",
-    "markdown-it": "^12.2.0",
-    "markdown-it-prism": "^2.2.1",
-    "prismjs": "^1.25.0",
-    "vue": "^2.6.14",
-    "vuetify": "^2.6.2",
-    "vuetify-pro-dialog": "workspace:^2.0.3"
-  },
-  "devDependencies": {
-    "@types/markdown-it": "^12.2.3",
-    "@types/prismjs": "^1.16.6"
+    "@vue/composition-api": "^1.7.0",
+    "vuetify-pro-dialog": "workspace:*"
   }
 }
