--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
       "require": "./lib/vuetify-pro-dialog.umd.js"
     }
   },
-  "types": "./lib/src/index.d.ts",
+  "types": "./lib/index.d.ts",
   "files": [
     "lib",
     "package.json",
@@ -72,7 +72,7 @@
     "typescript": "^4.4.3",
     "unplugin-vue-components": "^0.17.2",
     "vite": "^2.6.4",
-    "vite-plugin-dts": "^0.9.4",
+    "vite-plugin-dts": "^1.3.1",
     "vite-plugin-eslint": "^1.3.0",
     "vite-plugin-vue2": "^1.9.0",
     "vue": "^2.6.14",
