--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "lint:fix": "eslint {src,examples}/**/*.{js,ts,tsx,vue} --fix",
     "git-commit": "git-cz",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
-    "push": "pnpm build:lib && pnpm publish --no-git-checks --registry https://registry.npmjs.org/"
+    "push": "pnpm build:lib && pnpm publish --no-git-checks --registry https://registry.npmjs.org/",
+    "prepare": "husky install"
   },
   "config": {
     "commitizen": {
@@ -47,9 +48,9 @@
     }
   },
   "devDependencies": {
-    "@commitlint/cli": "^15.0.0",
-    "@commitlint/config-conventional": "^15.0.0",
-    "@commitlint/cz-commitlint": "^15.0.0",
+    "@commitlint/cli": "^17.0.3",
+    "@commitlint/config-conventional": "^17.0.3",
+    "@commitlint/cz-commitlint": "^17.0.3",
     "@types/lodash.merge": "^4.6.6",
     "@types/node": "^16.11.8",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
@@ -59,14 +60,14 @@
     "@vue/compiler-sfc": "^3.2.22",
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^9.1.0",
-    "commitizen": "^4.2.4",
+    "commitizen": "^4.2.5",
     "conventional-changelog-cli": "^2.1.1",
     "eslint": "^8.2.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.1.1",
-    "husky": "4.2.5",
-    "lint-staged": "^12.1.0",
+    "husky": "^8.0.1",
+    "lint-staged": "^13.0.3",
     "prettier": "^2.4.1",
     "sass": "1.32.13",
     "typescript": "^4.4.3",
