--- a/package.json
+++ b/package.json
@@ -51,30 +51,30 @@
     "@commitlint/cli": "^17.0.3",
     "@commitlint/config-conventional": "^17.0.3",
     "@commitlint/cz-commitlint": "^17.0.3",
+    "@rushstack/eslint-patch": "^1.1.4",
     "@types/lodash.merge": "^4.6.6",
     "@types/node": "^16.11.8",
-    "@typescript-eslint/eslint-plugin": "^5.4.0",
-    "@typescript-eslint/parser": "^5.4.0",
     "@vitejs/plugin-vue": "^1.9.3",
     "@vue/babel-helper-vue-jsx-merge-props": "^1.2.1",
     "@vue/compiler-sfc": "^3.2.22",
-    "@vue/eslint-config-prettier": "^6.0.0",
-    "@vue/eslint-config-typescript": "^9.1.0",
+    "@vue/eslint-config-prettier": "^7.0.0",
+    "@vue/eslint-config-typescript": "^11.0.0",
     "commitizen": "^4.2.5",
     "conventional-changelog-cli": "^2.1.1",
-    "eslint": "^8.2.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-vue": "^8.1.1",
+    "eslint": "^8.20.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-define-config": "^1.5.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-vue": "^9.2.0",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
-    "prettier": "^2.4.1",
+    "prettier": "^2.7.1",
     "sass": "1.32.13",
     "typescript": "^4.4.3",
     "unplugin-vue-components": "^0.17.2",
     "vite": "^2.6.4",
     "vite-plugin-dts": "^1.3.1",
-    "vite-plugin-eslint": "^1.3.0",
+    "vite-plugin-eslint": "^1.6.1",
     "vite-plugin-vue2": "^1.9.0",
     "vue": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
