--- a/package.json
+++ b/package.json
@@ -33,12 +33,13 @@
   ],
   "scripts": {
     "dev": "vite",
-    "build:lib": "vue-tsc --noEmit && vite build",
-    "build:examples": "pnpm build:lib && vue-tsc --noEmit && vite build --mode examples",
+    "build:lib": "pnpm check:types && vite build",
+    "build:examples": "pnpm build:lib && pnpm check:types && vite build --mode examples",
     "lint": "eslint {src,examples}/**/*.{js,ts,tsx,vue}",
     "lint:fix": "eslint {src,examples}/**/*.{js,ts,tsx,vue} --fix",
     "git-commit": "git-cz",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
+    "check:types": "vue-tsc --noEmit --skipLibCheck",
     "push": "pnpm build:lib && pnpm publish --no-git-checks --registry https://registry.npmjs.org/",
     "prepare": "husky install"
   },
@@ -52,13 +53,11 @@
     "@commitlint/config-conventional": "^17.0.3",
     "@commitlint/cz-commitlint": "^17.0.3",
     "@rushstack/eslint-patch": "^1.1.4",
-    "@types/lodash.merge": "^4.6.6",
-    "@types/node": "^16.11.8",
-    "@vitejs/plugin-vue": "^1.9.3",
-    "@vue/babel-helper-vue-jsx-merge-props": "^1.2.1",
+    "@types/lodash.merge": "^4.6.7",
     "@vue/compiler-sfc": "^3.2.22",
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/eslint-config-typescript": "^11.0.0",
+    "@vue/runtime-dom": "^3.2.37",
     "commitizen": "^4.2.5",
     "conventional-changelog-cli": "^2.1.1",
     "eslint": "^8.20.0",
@@ -68,6 +67,7 @@
     "eslint-plugin-vue": "^9.2.0",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
+    "lodash.merge": "^4.6.2",
     "prettier": "^2.7.1",
     "sass": "1.32.13",
     "typescript": "^4.4.3",
@@ -75,13 +75,10 @@
     "vite": "^2.6.4",
     "vite-plugin-dts": "^1.3.1",
     "vite-plugin-eslint": "^1.6.1",
-    "vite-plugin-vue2": "^1.9.0",
+    "vite-plugin-vue2": "^2.0.2",
     "vue": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
     "vue-tsc": "^0.29.5",
-    "vuetify": "^2.6.2"
-  },
-  "dependencies": {
-    "lodash.merge": "^4.6.2"
+    "vuetify": "^2.6.7"
   }
 }
