--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
     "resolveJsonModule": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "types": ["vite/client", "vuetify", "node"],
+    "types": ["vite/client", "vuetify"],
     "lib": ["esnext", "dom"],
     "paths": {
       "@/*":["./src/*"]
