--- a/package.json
+++ b/package.json
@@ -48,6 +48,16 @@
       "path": "@commitlint/cz-commitlint"
     }
   },
+  "peerDependencies": {
+    "@vue/composition-api": "^1.1.0",
+    "vue": "^2.6.0",
+    "vuetify": "^2.0.0"
+  },
+  "peerDependenciesMeta": {
+    "@vue/composition-api": {
+      "optional": true
+    }
+  },
   "devDependencies": {
     "@commitlint/cli": "^17.0.3",
     "@commitlint/config-conventional": "^17.0.3",
@@ -55,6 +65,7 @@
     "@rushstack/eslint-patch": "^1.1.4",
     "@types/lodash.merge": "^4.6.7",
     "@vue/compiler-sfc": "^3.2.22",
+    "@vue/composition-api": "^1.7.0",
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/eslint-config-typescript": "^11.0.0",
     "@vue/runtime-dom": "^3.2.37",
@@ -80,5 +91,8 @@
     "vue-template-compiler": "^2.6.14",
     "vue-tsc": "^0.29.5",
     "vuetify": "^2.6.7"
+  },
+  "dependencies": {
+    "vue-demi": "^0.13.5"
   }
 }
